[package]
name = "fluent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fluent node implementation"

[lints]
workspace = true

[dependencies]
# reth
reth-storage-rpc-provider = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-chain-state = { workspace = true }
reth-chainspec = { workspace = true, default-features = false }
reth-cli = { workspace = true }
reth-cli-commands = { workspace = true }
reth-cli-runner = { workspace = true }
reth-cli-util = { workspace = true }
reth-codecs = { workspace = true }
reth-codecs-derive = { workspace = true }
reth-config = { workspace = true, default-features = false }
reth-consensus = { workspace = true, default-features = false }
reth-consensus-common = { workspace = true, default-features = false }
reth-consensus-debug-client = { workspace = true }
reth-db = { workspace = true, default-features = false }
reth-db-api = { workspace = true }
reth-db-common = { workspace = true }
reth-db-models = { workspace = true, default-features = false }
reth-discv4 = { workspace = true }
reth-discv5 = { workspace = true }
reth-dns-discovery = { workspace = true }
reth-downloaders = { workspace = true }
reth-e2e-test-utils = { workspace = true }
reth-ecies = { workspace = true }
reth-engine-local = { workspace = true }
reth-engine-primitives = { workspace = true, default-features = false }
reth-engine-tree = { workspace = true }
reth-engine-service = { workspace = true }
reth-engine-util = { workspace = true }
reth-era = { workspace = true }
reth-era-downloader = { workspace = true }
reth-era-utils = { workspace = true }
reth-errors = { workspace = true }
reth-eth-wire = { workspace = true }
reth-eth-wire-types = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-ethereum-cli = { workspace = true, default-features = false }
reth-ethereum-consensus = { workspace = true, default-features = false }
reth-ethereum-engine-primitives = { workspace = true, default-features = false }
reth-ethereum-forks = { workspace = true, default-features = false }
reth-ethereum-primitives = { workspace = true, default-features = false }
reth-ethereum = { workspace = true, features = ["test-utils", "node", "evm", "pool"] }
reth-etl = { workspace = true }
reth-evm = { workspace = true, default-features = false }
reth-evm-ethereum = { workspace = true, default-features = false }
reth-execution-errors = { workspace = true, default-features = false }
reth-execution-types = { workspace = true, default-features = false }
reth-exex = { workspace = true }
reth-exex-test-utils = { workspace = true }
reth-exex-types = { workspace = true }
reth-fs-util = { workspace = true }
reth-invalid-block-hooks = { workspace = true }
reth-ipc = { workspace = true }
reth-libmdbx = { workspace = true }
reth-mdbx-sys = { workspace = true }
reth-metrics = { workspace = true }
reth-net-banlist = { workspace = true }
reth-net-nat = { workspace = true }
reth-network = { workspace = true }
reth-network-api = { workspace = true }
reth-network-p2p = { workspace = true }
reth-network-peers = { workspace = true, default-features = false }
reth-network-types = { workspace = true }
reth-nippy-jar = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-node-ethstats = { workspace = true }
reth-node-events = { workspace = true }
reth-node-metrics = { workspace = true }
reth-node-types = { workspace = true }
reth-payload-builder = { workspace = true }
reth-payload-builder-primitives = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-payload-validator = { workspace = true }
reth-payload-util = { workspace = true }
reth-primitives = { workspace = true, default-features = false }
reth-primitives-traits = { workspace = true, default-features = false }
reth-provider = { workspace = true }
reth-prune = { workspace = true }
reth-prune-types = { workspace = true, default-features = false }
reth-revm = { workspace = true, default-features = false }
reth-rpc = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-api-testing-util = { workspace = true }
reth-rpc-builder = { workspace = true }
reth-rpc-e2e-tests = { workspace = true }
reth-rpc-engine-api = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true, default-features = false }
reth-rpc-layer = { workspace = true }
reth-rpc-server-types = { workspace = true }
reth-rpc-convert = { workspace = true }
reth-stages = { workspace = true }
reth-stages-api = { workspace = true }
reth-stages-types = { workspace = true, default-features = false }
reth-static-file = { workspace = true }
reth-static-file-types = { workspace = true, default-features = false }
reth-storage-api = { workspace = true, default-features = false }
reth-storage-errors = { workspace = true, default-features = false }
reth-tasks = { workspace = true }
reth-tokio-util = { workspace = true }
reth-tracing = { workspace = true, default-features = false }
reth-tracing-otlp = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-trie = { workspace = true }
reth-trie-common = { workspace = true, default-features = false }
reth-trie-db = { workspace = true }
reth-trie-parallel = { workspace = true }
reth-trie-sparse = { workspace = true, default-features = false }
reth-zstd-compressors = { workspace = true, default-features = false }

# fluentbase
fluentbase-revm = { workspace = true, features = ["std", "wasmtime"] }
fluentbase-genesis = { workspace = true, features = ["std", "wasmtime"] }

# alloy
alloy-primitives = { workspace = true }
#alloy-rpc-types = { workspace = true, features = ["engine"] }
alloy-genesis = { workspace = true }
alloy-evm = { workspace = true }

# tracing
tracing.workspace = true

# async
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }

# misc
#aquamarine.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
flate2 = { workspace = true }
eyre = { workspace = true }
serde_json = { workspace = true }

# for chainspec only
#sequoia-sqv = { version = "1", default-features = false, features = ["crypto-openssl"] }
#sequoia-openpgp = { version = "2.2.0", default-features = false, features = ["crypto-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }
directories = "6.0.0"

[dev-dependencies]
#backon.workspace = true
#tempfile.workspace = true

[features]
default = [
    "jemalloc",
    "otlp",
    "otlp-logs",
    "reth-revm/portable",
    "js-tracer",
    "keccak-cache-global",
    "asm-keccak",
    "min-debug-logs",
    "rocksdb",
]

otlp = [
    "reth-ethereum-cli/otlp",
    "reth-node-core/otlp",
]
otlp-logs = [
    "reth-ethereum-cli/otlp-logs",
    "reth-node-core/otlp-logs",
]
js-tracer = [
    "reth-node-builder/js-tracer",
    "reth-node-ethereum/js-tracer",
    "reth-rpc/js-tracer",
    "reth-rpc-eth-types/js-tracer",
]

dev = ["reth-ethereum-cli/dev"]

asm-keccak = [
    "reth-node-core/asm-keccak",
    "reth-primitives/asm-keccak",
    "reth-ethereum-cli/asm-keccak",
    "reth-node-ethereum/asm-keccak",
    "alloy-primitives/asm-keccak",
]
keccak-cache-global = [
    "reth-node-core/keccak-cache-global",
    "reth-node-ethereum/keccak-cache-global",
    "alloy-primitives/keccak-cache-global",
]
jemalloc = [
    "reth-cli-util/jemalloc",
    "reth-node-core/jemalloc",
    "reth-node-metrics/jemalloc",
    "reth-ethereum-cli/jemalloc",
]
jemalloc-prof = [
    "reth-cli-util/jemalloc",
    "reth-cli-util/jemalloc-prof",
    "reth-ethereum-cli/jemalloc-prof",
    "reth-node-metrics/jemalloc-prof",
]
jemalloc-symbols = [
    "jemalloc-prof",
    "reth-ethereum-cli/jemalloc-symbols",
]
jemalloc-unprefixed = [
    "reth-cli-util/jemalloc-unprefixed",
    "reth-node-core/jemalloc",
    "reth-node-metrics/jemalloc",
    "reth-ethereum-cli/jemalloc",
]
tracy-allocator = [
    "reth-cli-util/tracy-allocator",
    "reth-ethereum-cli/tracy-allocator",
    "tracy",
]
tracy = [
    "reth-ethereum-cli/tracy",
    "reth-node-core/tracy",
]

# Because jemalloc is default and preferred over snmalloc when both features are
# enabled, `--no-default-features` should be used when enabling snmalloc or
# snmalloc-native.
snmalloc = [
    "reth-cli-util/snmalloc",
    "reth-ethereum-cli/snmalloc",
]
snmalloc-native = [
    "reth-cli-util/snmalloc-native",
    "reth-ethereum-cli/snmalloc-native",
]

min-error-logs = [
    "tracing/release_max_level_error",
    "reth-ethereum-cli/min-error-logs",
    "reth-node-core/min-error-logs",
]
min-warn-logs = [
    "tracing/release_max_level_warn",
    "reth-ethereum-cli/min-warn-logs",
    "reth-node-core/min-warn-logs",
]
min-info-logs = [
    "tracing/release_max_level_info",
    "reth-ethereum-cli/min-info-logs",
    "reth-node-core/min-info-logs",
]
min-debug-logs = [
    "tracing/release_max_level_debug",
    "reth-ethereum-cli/min-debug-logs",
    "reth-node-core/min-debug-logs",
]
min-trace-logs = [
    "tracing/release_max_level_trace",
    "reth-ethereum-cli/min-trace-logs",
    "reth-node-core/min-trace-logs",
]

rocksdb = ["reth-ethereum-cli/rocksdb", "reth-node-core/rocksdb"]
edge = ["rocksdb"]

[[bin]]
name = "fluent"
path = "src/main.rs"
