[package]
name = "fluentbase-runtime-upgrade"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "runtime-upgrade"
path = "main.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# workspace
fluentbase-sdk = { workspace = true, features = ["std"] }
rwasm = { workspace = true }
alloy-genesis = { workspace = true }
reth-chainspec = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
alloy-sol-types = { workspace = true }

# misc
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures-util = "0.3"
rpassword = "0.3.0"

# EVM / RPC / signing
ethers = { version = "2", default-features = false, features = ["abigen", "rustls", "ws"] }