[package]
name = "fluentbase-contracts-blake2f"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }
revm-precompile = { workspace = true }

[dev-dependencies]
fluentbase-testing = { workspace = true }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std", "revm-precompile/std", "fluentbase-testing/std"]
fluent-testnet = [
    "fluentbase-sdk/fluent-testnet",
    "fluentbase-testing/fluent-testnet"
]
