[package]
name = "fluentbase-contracts-bls12381"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }
bls12_381 = { git = "https://github.com/rwasm-patches/bls12_381.git", branch = "rwasm", default-features = false, features = ["groups", "alloc", "pairings"] }
revm-precompile = { workspace = true }

[dev-dependencies]
fluentbase-testing = { workspace = true }
serde = "1.0.228"
serde_json = "1.0.145"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std", "revm-precompile/std", "fluentbase-testing/std"]
fluent-testnet = [
    "fluentbase-sdk/fluent-testnet",
    "fluentbase-testing/fluent-testnet"
]
