[package]
name = "fluentbase-contracts-bn256"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }
revm-precompile = { workspace = true }
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }

[dev-dependencies]
fluentbase-testing = { workspace = true }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
fluent-testnet = [
    "fluentbase-sdk/fluent-testnet",
    "fluentbase-testing/fluent-testnet",
    "fluentbase-testing/std",
]
testing-enabled = []
