[package]
name = "fluentbase-contracts-ecrecover"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }
revm-precompile = { workspace = true }

[dev-dependencies]

[build-dependencies]
fluentbase-build = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "fluentbase-sdk/std"
]
