[package]
name = "fluentbase-contracts-eip2935"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true, features = ["fast-panic", "debug-print"] }

[build-dependencies]
fluentbase-build = { workspace = true }
fluentbase-sdk = { workspace = true }

[features]
default = ["std"]
std = [
    "fluentbase-sdk/std"
]
