[package]
name = "fluentbase-contracts-eip2935"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true, features = [
    #    "fast-panic",
    #    "debug-print",
] }

[dev-dependencies]
fluentbase-testing = { workspace = true }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
