[package]
name = "fluentbase-contracts-eip2935"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }

[dev-dependencies]
fluentbase-testing = { workspace = true }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std", "fluentbase-testing/std"]
debug-print = ["fluentbase-sdk/debug-print", "fluentbase-testing/debug-print"]