[package]
name = "fluentbase-contracts-eip7951"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true }
sha2 = { version = "0.10", default-features = false }
revm-precompile = { workspace = true }

[dev-dependencies]
fluentbase-testing = { workspace = true }
hex = "0.4.3"
p256 = { version = "0.13.2", default-features = false, features = [
    "ecdsa",
    "arithmetic",
] }
sha2 = { version = "0.10", default-features = false }

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["fluentbase-sdk/std", "fluentbase-testing/std"]
debug-print = ["fluentbase-sdk/debug-print", "fluentbase-testing/debug-print"]