[package]
name = "fluentbase-contracts-erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { workspace = true, features = ["fast-panic", "debug-print"] }
fluentbase-erc20 = { workspace = true }

[dev-dependencies]
fluentbase-sdk-testing = { workspace = true }

[build-dependencies]
fluentbase-build = { workspace = true }
fluentbase-sdk = { workspace = true }

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
